--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,30 @@ img {
   display: block;
   max-width: 100%;
 }
+
+button[data-start] {
+  width: 50px;
+  height: 25px;
+  background-color: rgb(211, 243, 213);
+  border-color: transparent;
+  border-radius: 5px;
+  box-shadow: 0px -1px 34px 40px rgba(34, 60, 80, 0.2) inset;
+  cursor: pointer;
+}
+
+button[data-stop] {
+  width: 50px;
+  height: 25px;
+  background-color: rgb(255, 4, 66);
+  border-color: transparent;
+  border-radius: 5px;
+  box-shadow: 0px -1px 34px 40px rgba(34, 60, 80, 0.2) inset;
+  cursor: pointer;
+}
+
+.timer {
+  margin-top: 10%;
+  display: flex;
+  justify-content: space-around;
+  font-size: 48px;
+}
